route bug test 1

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "build": "npm install --prefix 'musicmate-api' && npm install --prefix 'musicmate-view' && npm run build --prefix 'musicmate-view'",
-    "start": "npm start --prefix 'musicmate-api'"
+    "build": "npm install --prefix musicmate-api && npm install --prefix musicmate-view && npm run build --prefix musicmate-view",
+    "start": "npm start --prefix musicmate-api"
   },
   "keywords": [],
   "author": "",
