add new index file for hosting

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "music-mate",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
     "build": "npm install --prefix musicmate-api && npm install --prefix musicmate-view && npm run build --prefix musicmate-view",
     "start": "npm start --prefix musicmate-api"
