--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "build": "npm install --prefix musicmate-api && npm install --prefix musicmate-view && npm run build --prefix musicmate-view",
+    "build": "npm install --prefix musicmate-api --production=false && npm install --prefix musicmate-view --production=false && npm run build --prefix musicmate-view",
     "start": "npm start --prefix musicmate-api"
   },
   "keywords": [],
